<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Phone Forwarder</string>
    <string name="login_name">Session Settings</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email:</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="start_forward">Start Forwarding</string>
    <string name="stop_forward">Stop Forwarding</string>
    <string name="stop_background">Stop Background Service</string>
    <string name="get_messages">Get Messages</string>
    <string name="clear_messages">Clear</string>
    <string name="settings">Settings…</string>
    <string name="forward_missed_calls">Forward Missed Calls</string>
    <string name="forward_sms">Forward SMS Messages</string>
    <string name="override_email">Override System Email</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="done">Done</string>
    <string name="select_account">Please choose an account:</string>

</resources>
