<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <CheckBox
        android:id="@+id/chkForwardCalls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/forward_missed_calls"
        android:checked="true" />

    <CheckBox
        android:id="@+id/chkForwardSms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chkForwardCalls"
        android:layout_alignParentLeft="true"
        android:text="@string/forward_sms"
        android:checked="true" />

    <TextView
        android:id="@+id/lblSelectAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chkForwardSms"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:text="@string/select_account"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/lstAccounts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnDone"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/lblSelectAccount"
        android:choiceMode="singleChoice" />
    
    <CheckBox
        android:id="@+id/chkOverrideEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/chkForwardSms"
        android:layout_marginTop="20dp"
        android:text="@string/override_email"
        android:enabled="false"
        android:visibility="gone" />
    
    <TextView
        android:id="@+id/lblUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chkOverrideEmail"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:enabled="false"
        android:visibility="gone" />
    
    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lblUsername"
        android:layout_alignBottom="@+id/lblUsername"
        android:inputType="text"
        android:enabled="false"
        android:visibility="gone" />
    
    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblUsername"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:enabled="false"
        android:visibility="gone" />
    
    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lblPassword"
        android:layout_alignLeft="@+id/txtUsername"
        android:layout_alignBottom="@+id/lblPassword"
        android:inputType="textPassword"
        android:enabled="false"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtPassword"
        android:onClick="btnLogin_onClick"
        android:text="@string/login"
        android:enabled="false"
        android:visibility="gone"  />
    
    <Button
        android:id="@+id/btnDone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="btnDone_onClick"
        android:text="@string/done" />

</RelativeLayout>