<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/email"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lblEmail"
        android:layout_alignBottom="@+id/lblEmail"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:enabled="false">
        <requestFocus />
    </EditText>
    
    <Button
        android:id="@+id/btnStartForwarding"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtEmail"
        android:onClick="btnStartForwarding_onClick"
        android:text="@string/start_forward"
        android:enabled="false" />

    <TextView
        android:id="@+id/lblNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnStartForwarding"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <Button
        android:id="@+id/btnSettings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"    
        android:layout_alignParentBottom="true"
        android:onClick="btnSettings_onClick"
        android:text="@string/settings" />

</RelativeLayout>